--- a/shrink_bars.css
+++ b/shrink_bars.css
@@ -2,8 +2,8 @@
     #nav-bar .toolbarbutton-1:not([type=menu-button]),
     #nav-bar .toolbarbutton-1 > .toolbarbutton-menubutton-button,
     #nav-bar .toolbarbutton-1 > .toolbarbutton-menubutton-dropmarker {
-        padding-top: 1px !important;
-        padding-bottom: 1px !important;
+        margin-bottom: -5px !important;
+        margin-top: -5px !important;
     }
     #toolbar-menubar  {
         margin-bottom: -5px !important;
